namespace Atlas.Api.DTOs
{
    public class GuestDto
    {
        public int Id { get; set; }
        public string Name { get; set; } = string.Empty;
        public string Phone { get; set; } = string.Empty;
        public string Email { get; set; } = string.Empty;
        public string? IdProofUrl { get; set; }
    }
}
